--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "html-react-parser": "^5.2.6",
     "next": "15.4.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-katex": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
