--- a/front/package.json
+++ b/front/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.11.0",
     "html-react-parser": "^5.2.6",
-    "next": "15.4.5",
+    "next": "15.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-katex": "^3.1.0"
+    "react-katex": "^3.1.0",
+    "tinymce": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,7 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.5",
+    "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
