--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 3000 --turbopack",
     "build": "next build",
-    "start": "next start -p 3000",
+    "postbuild": "cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/public",
+    "start": "node .next/standalone/server.js",
     "lint": "next lint"
   },
   "dependencies": {
