--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "postbuild": "cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/public",
     "start": "node .next/standalone/server.js",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^6.3.0",
